improve status.ipynb

--- a/status.ipynb
+++ b/status.ipynb
@@ -10,6 +10,9 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
+    "import matplotlib as mpl\n",
+    "mpl.rcParams['savefig.dpi'] = 100 \n",
+    "#mpl.rcParams['figure.figsize'] = 10,8\n",
     "from dyson.logger import *\n",
     "import numpy as np\n",
     "import dyson.calculator as calc\n",
